--- a/src/app/shared/auth-layout/auth-layout.component.html
+++ b/src/app/shared/auth-layout/auth-layout.component.html
@@ -32,11 +32,10 @@
       <mat-divider></mat-divider>
 
       <!-- Dropdown menu links -->
-      <button  mat-menu-item (click)="servicesPage()">
-        <mat-icon class="menu">receipt</mat-icon>
-        <span class="menu">Create an Invoice</span>
+      <button  mat-menu-item (click)="adminHome()">
+        <mat-icon class="menu">home</mat-icon>
+        <span class="menu">Home</span>
       </button>
-
       <button  mat-menu-item (click)="servicesConfig()">
         <mat-icon class="menu">list_alt</mat-icon>
         <span class="menu">Service Configuration</span>
